remove long constructor.